Update CircularProgressView package

--- a/app/src/main/res/layout/item_project.xml
+++ b/app/src/main/res/layout/item_project.xml
@@ -20,7 +20,7 @@
         android:textColor="#000000"
         android:textStyle="bold" />
 
-    <com.gvnjv.swiftycompanion.ui.CircularProgressView
+    <com.gvnjv.swiftycompanion.activities.projects.CircularProgressView
         android:id="@+id/projectMarkCircle"
         android:layout_width="74dp"
         android:layout_height="74dp"
